--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
     Chat with us live if you have questions or want to place an order!</p>
   </div>
 
-  <!-- Tawk.to Live Chat Integration -->
+  <!--Start of Tawk.to Script-->
   <script type="text/javascript">
-    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-    (function(){
-      var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-      s1.async=true;
-      // Replace YOUR_TAWKTO_PROPERTY_ID below with your actual property ID from Tawk.to
-      s1.src='https://embed.tawk.to/YOUR_TAWKTO_PROPERTY_ID/1abcdefg';
-      s1.charset='UTF-8';
-      s1.setAttribute('crossorigin','*');
-      s0.parentNode.insertBefore(s1,s0);
-    })();
+  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+  (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/68fb29f3cfefaf195179ded1/1j8ahno6h';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+  })();
   </script>
+  <!--End of Tawk.to Script-->
 </body>
 </html>
