Update image source to use a URL

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <h1>Welcome to the Cookie Kitchen!</h1>
-    <img src="cookies.jpg" 
+    <img src="https://hairycookies.github.io/sinksidecooling/cookies.jpg" 
          alt="Middle aged white lady setting cookies on racks in her kitchen" class="main-img">
     <p>Fresh cookies, straight from the oven.<br>
     Chat with us live if you have questions or want to place an order!</p>
